@@ -1,5 +1,6 @@
 2.0.0b7
  - fix: disable close buttons of MDI subwindows on macOS (#29)
+ - fix: allow Shift+click on plot matrix element
 2.0.0b6
  - ref: move custom widgets to separate submodule (#24)
  - fix: bad alignment when selecting "Plot" in QuickView (#31)
